<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".emicalculator.MainActivityEmiCalculator">

    <androidx.cardview.widget.CardView
        android:id="@+id/pie_card"
        app:cardCornerRadius="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:outlineAmbientShadowColor="@color/purple_700"
        android:elevation="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="23dp"
                app:egInnerPaddingColor="@android:color/transparent"
                app:egInnerPaddingOutline="35"
                app:egLegendTextSize="18sp"/>

            <Button
                android:id="@+id/view_detail_btn"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tt"
                android:layout_marginStart="30dp"
                android:layout_marginTop="31dp"
                android:layout_toEndOf="@+id/pie_chart"
                android:background="@android:color/transparent"
                android:text="@string/view_details"
                android:textAlignment="viewEnd"
                android:textColor="#EE0000"
                android:textSize="10dp" />

            <LinearLayout
                android:id="@+id/rr"
                android:layout_marginTop="100dp"
                android:layout_toEndOf="@+id/pie_chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/dd"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    app:srcCompat="@drawable/squer" />
                <TextView
                    android:id="@+id/princ"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/principal" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tt"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/rr"
                android:layout_toEndOf="@+id/pie_chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/ii"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    app:srcCompat="@drawable/squrer2" />
                <TextView
                    android:id="@+id/intr"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/interest_amount" />
            </LinearLayout>

        </RelativeLayout>



    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/pie_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/data_input_card"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="12dp"
                android:outlineSpotShadowColor="@color/black"
                android:outlineAmbientShadowColor="@color/purple_700"
                android:elevation="23dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="23dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/loan_amount" />

                    <EditText
                        android:id="@+id/ei"
                        android:maxLength="8"
                        android:inputType="number"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/la_start" />
                </LinearLayout>

                    <SeekBar
                        android:id="@+id/la_seek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/la_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/la_start" />

                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/la_end"
                            android:textAlignment="viewEnd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/la_end" />

                    </LinearLayout>


                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tenure" />

                <SeekBar
                    android:id="@+id/te_seek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/te_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/te_start" />

                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/te_end"
                            android:textAlignment="viewEnd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/te_end" />

                    </LinearLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interest_rate" />

                <SeekBar
                    android:id="@+id/ir_seek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/ir_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ir_start" />

                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/ir_end"
                            android:textAlignment="viewEnd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/ir_end" />


                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/data_show_card"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="12dp"
                android:outlineSpotShadowColor="@color/black"
                android:outlineAmbientShadowColor="@color/purple_700"
                android:elevation="23dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="23dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emi" />
                    <TextView
                        android:textSize="50sp"
                        android:id="@+id/lone_text"
                        android:textStyle="bold|italic"
                        android:textColor="#FF9800"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/coda"
                        android:text="@string/for_all" />


                    <TextView
                        android:layout_marginTop="15dp"
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/principal" />
                    <TextView
                        android:textSize="25sp"
                        android:textStyle="italic|bold"
                        android:id="@+id/principal_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/coda"
                        android:text="@string/for_all" />




                    <TextView
                        android:layout_marginTop="15dp"
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/interest_amount" />

                    <TextView
                        android:id="@+id/interest_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/coda"
                        android:text="@string/for_all"
                        android:textSize="25sp"
                        android:textStyle="italic|bold" />





                    <TextView
                        android:layout_marginTop="15dp"
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Total_amount" />

                    <TextView
                        android:textSize="25sp"
                        android:id="@+id/total_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic|bold"
                        android:text="@string/for_all" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>